tests/baselines/reference/staticInstanceResolution5.errors.txt
tests/cases/compiler/staticInstanceResolution5_1.ts(4,14): error TS2304: Cannot find name 'WinJS'.
tests/cases/compiler/staticInstanceResolution5_1.ts(5,23): error TS2304: Cannot find name 'WinJS'.
tests/cases/compiler/staticInstanceResolution5_1.ts(6,16): error TS2304: Cannot find name 'WinJS'.


==== tests/cases/compiler/staticInstanceResolution5_1.ts (3 errors) ====
    import WinJS = require('staticInstanceResolution5_0');
    
    // these 3 should be errors
    var x = (w1: WinJS) => { };
                 ~~~~~
!!! error TS2304: Cannot find name 'WinJS'.
    var y = function (w2: WinJS) { }
                          ~~~~~
!!! error TS2304: Cannot find name 'WinJS'.
    function z(w3: WinJS) { }
                   ~~~~~
!!! error TS2304: Cannot find name 'WinJS'.
    
==== tests/cases/compiler/staticInstanceResolution5_0.ts (0 errors) ====
    export class Promise {
        static timeout(delay: number): Promise {
            return null;
        }
    }
    